# screenshotHeatmap

./: README.md  app.py  interactive_extractor.py  pyproject.toml  requirements.txt  visualize_interactives.py
dataset/: .gitignore  README.md  crawl_dataset.py  sites.txt
